fix raceDetail button spacing

--- a/frontend/src/components/raceDetail/styles.scss
+++ b/frontend/src/components/raceDetail/styles.scss
@@ -75,11 +75,6 @@
     margin-left: 1.2rem;
     // padding-top: 4px;
   }
-
-  .control {
-    flex-basis: 30%;
-    margin-right: 0.5rem;
-  }
 }
 
 #the-candidates,
